syntax = "proto3";

option go_package = "game/generated/pb/game";

import "google/protobuf/empty.proto";
option cc_generic_services = true;

message Centre2GsLoginRequest
{
  uint32 enter_gs_type = 1;
}

message GameNodeExitGameRequest
{
}

service ScenePlayer
{
  rpc Centre2GsLogin (Centre2GsLoginRequest) returns (google.protobuf.Empty);
  rpc ExitGame (GameNodeExitGameRequest) returns (google.protobuf.Empty);
}